# STATS237

./: Dockerfile
api/: app.py  provenance.py
book/: mkdocs.yml
book/docs/: index.md
docs/: book.md  calibration.md  public_api.md  v1_roadmap.md
scripts/: build_all.py  golden.py  release.sh  vr_pro_report.py
stats237_course_v0_10_0/: README.md  RELEASE_NOTES.md  requirements-docs.txt
stats237_course_v0_10_0/api/: models.py
stats237_course_v0_10_0/docs/: deployment.md
stats237_course_v0_10_0/golden/: expected.json
stats237_course_v0_10_0/scripts/: build_all.py  problem_bank.py  vr_demo.py
stats237_course_v0_10_0/stats237_quantlib/: pyproject.toml
stats237_course_v0_10_0/tests/: test_golden_runs.py
stats237_course_v0_8_0/: README.md  conftest.py  requirements.txt  run_all.ps1  run_all.sh
stats237_course_v0_8_0/api/: run.py
stats237_course_v0_8_0/book/: mkdocs.yml
stats237_course_v0_8_0/scripts/: build_all.py  coverage_matrix.py  export_reader_pdf.py  extract_text.py  start_api.sh
stats237_course_v0_8_0/stats237_quantlib/: pyproject.toml
stats237_course_v0_8_0/stats237_quantlib/stats237_quantlib/: __init__.py  meta.py
stats237_course_v0_8_0/stats237_quantlib/stats237_quantlib/mc/: basket.py
stats237_course_v0_9_0/: README.md  RELEASE_NOTES.md  requirements.txt
stats237_course_v1_0_0/: README.md  RELEASE_NOTES.md  conftest.py  docker-compose.yml
stats237_course_v1_2_0/: RELEASE_NOTES.md  run_all.ps1
stats237_course_v1_3_0/: README.md  RELEASE_NOTES.md  requirements.txt  run_all.sh
stats237_quantlib/: pyproject.toml
(+94 files in other folders)
